Correct button spacing on device interaction, center the icon in the button.

--- a/public/modules/player/css/device-interaction.scss
+++ b/public/modules/player/css/device-interaction.scss
@@ -87,6 +87,15 @@
     }
 }
 
+.iqss-device-interaction-content-player-actions-buttons {
+    display: flex;
+    flex: 1;
+
+    > a, div {
+        margin-left: 15px;
+    }
+}
+
 .iqss-device-interaction-content-player-actions-center {
     flex: 0 0 auto;
     align-self: center;
@@ -205,33 +214,27 @@
 }
 
 .iqss-device-interaction-content-player-container-play {
-    background: url(../../../modules/core/img/play%20button.svg) left center no-repeat;
-    flex: 1 1 25px;
+    background: url(../../../modules/core/img/play%20button.svg) center no-repeat;
     background-size: 20px 20px;
-    line-height: 44px;
     cursor: pointer;
-    margin-left: 15px;
-    width:15px;
+    width: 30px;
+    height: 30px;
 }
 
 .iqss-device-interaction-content-player-container-pause {
-    background: url(../../../modules/core/img/pause_button.svg) left center no-repeat;
-    flex: 1 1 25px;
+    background: url(../../../modules/core/img/pause_button.svg) center no-repeat;
     background-size: 20px 20px;
-    line-height: 44px;
     cursor: pointer;
-    margin-left: 15px;
-    width:15px;
+    width: 30px;
+    height: 30px;
 }
 
 .iqss-device-interaction-content-player-container-details {
-    background: url(../../../modules/core/img/open-new-tab.svg) left center no-repeat;
-    flex: 1 1 25px;
+    background: url(../../../modules/core/img/open-new-tab.svg) center no-repeat;
     background-size: 20px 20px;
-    line-height: 44px;
     cursor: pointer;
-    margin-left: 15px;
-    width:15px;
+    width: 30px;
+    height: 30px;
 }
 
 .iqss-device-interaction-content-player-actions-center-previous {
